<resources>
    <string name="app_name">Start engine</string>

    <!-- region Tile -->
    <string name="tile_start_engine">Start engine</string>
    <string name="tile_start_engine_desc">Engine heater start</string>
    <!-- endregion Tile -->

    <!-- region Widget -->
    <string name="widget_text">Start engine</string>
    <!-- endregion Widget -->

    <!-- region SendSMS -->
    <string name="sendsms_send_sms">Try send SMS to %s with %s</string>
    <string name="sendsms_error">Error. Any problems</string>
    <string name="sendsms_data_invalid">Data is not valid. Please double check</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- endregion SendSMS -->

    <!-- region Number Dialog Invalid -->
    <string name="dialog_invalid_title">Data is not valid</string>
    <string name="dialog_invalid_with_args_text">Have same problem with: %s</string>
    <string name="dialog_invalid_without_args_text">Same problem. Please double check properties</string>
    <string name="dialog_invalid_ok">Ok</string>
    <string name="dialog_invalid_setting">Setting</string>
    <!-- endregion Number Dialog Invalid -->

    <!-- region Preference -->
    <!-- Preference Titles -->
    <string name="account_header">Account setting</string>
    <string name="command_header">Command setting</string>
    <!-- Account Preferences -->
    <string name="number_title">Number of car</string>
    <string name="auto_reading_sms_title">Auto reading SMS</string>
    <string name="auto_reading_sms_on">SMS will be read</string>
    <string name="auto_reading_sms_off">SMS don\'t read</string>
    <!-- Command Preferences -->
    <string name="start_engine_title">Start engine</string>
    <!-- endregion Preference -->

    <!-- region Keys of preference -->
    <string name="key_number">number</string>
    <string name="key_auto_read">auto_read</string>
    <string name="key_start_engine">start_engine</string>
    <!-- endregion Keys of preference -->

    <!-- region Settings menu -->
    <string name="settings_menu_status">Check</string>
    <string name="settings_menu_status_ok">Data is valid</string>
    <string name="settings_menu_status_error">Error</string>
    <!-- endregion Settings menu -->
</resources>