<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/account_header">

        <EditTextPreference
            app:key="@string/key_number"
            app:title="@string/number_title"
            app:useSimpleSummaryProvider="true"
            app:singleLineTitle="true"
            android:inputType="numberDecimal"
            android:digits="0123456789" />

        <SwitchPreferenceCompat
            app:enabled="false"
            app:key="@string/key_auto_read"
            app:summaryOff="@string/auto_reading_sms_off"
            app:summaryOn="@string/auto_reading_sms_on"
            app:title="@string/auto_reading_sms_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/command_header">

        <EditTextPreference
            app:key="@string/key_start_engine"
            app:title="@string/start_engine_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>